🚑️ Height reduction of #Activities cards to fix crushed effect. Fixed filters alignment for mobile version

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -445,14 +445,17 @@ footer section ul li a:hover, footer section ul li a:active {
 @media screen and (max-width: 1400px) and (min-width: 1131px) {
     #activities section a {
         width: 220px;
+        height: 300px;
     }
 
     .card450-300 {
         width: 220px;
+        height: 300px;
     }
 
     .card450-300 img {
         width: 100%;
+        height: 220px;
     }
 
     .card450-300 h3 {
@@ -463,14 +466,17 @@ footer section ul li a:hover, footer section ul li a:active {
 @media screen and (max-width: 1130px) and (min-width: 993px) {
     #activities section a {
         width: 180px;
+        height: 300px;
     }
 
     .card450-300 {
         width: 180px;
+        height: 300px;
     }
 
     .card450-300 img {
         width: 100%;
+        height: 230px;
     }
 
     .card450-300 h3 {
