--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -70,15 +70,32 @@
     #find > div:first-of-type {
         flex-wrap: wrap;
         margin: 34px 0 0 20px;
+
+    }
+
+    #find > div:first-of-type h3 {
+        width: 100%
+    }
+
+    #find > div:first-of-type button i {
+        padding-left: 15px;
+        font-size: 16px;
+    }
+    #find > div:first-of-type button i:before {
+        width: 22px;
+    }
+
+    #find > div:first-of-type button {
+        font-size: 10px;
+        width: 150px;
+        padding-right: 10px;
+        text-align: left;
+        line-height: 13px;
     }
 
     #find > div:last-of-type {
         flex-wrap: nowrap;
         margin: 40px 0 0 20px;
-    }
-
-    #find > div:first-of-type button {
-        font-size: 12px;
     }
 
     #main-container {
@@ -168,6 +185,7 @@
     }
 
     .card450-300 {
+        height: 200px;
         width: 100%;
     }
 
@@ -177,6 +195,7 @@
 
     .card450-300 img {
         width: 100%;
+        height: 150px;
     }
 
     footer {
